--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,24 @@
 {
-  "name": "SpeakPro Learning App",
+  "name": "SpeakPro App",
   "short_name": "SpeakPro",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "orientation": "portrait",
+  "scope": "./",
   "icons": [
     {
       "src": "1000094592.jpg",
       "sizes": "192x192",
       "type": "image/jpeg",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "1000094592.jpg",
       "sizes": "512x512",
       "type": "image/jpeg",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
